--- a/sass/style.css
+++ b/sass/style.css
@@ -12,7 +12,7 @@
   grid-auto-rows: 1fr;
   gap: 0px 0px;
   grid-auto-flow: row;
-  grid-template-areas: "header header header header header header" "section2 section2 section2 section2 section2 section1" "section3 section3 section4 section4 section4 section1" "main__propio main__propio main__propio main__propio main__propio main__propio" "main__propio main__propio main__propio main__propio main__propio main__propio" "publicidad publicidad publicidad publicidad publicidad publicidad" "pie__pagina pie__pagina pie__pagina pie__pagina pie__pagina pie__pagina";
+  grid-template-areas: "header header header header header header" "section2 section2 section2 section2 section2 section1" "section3 section3 section4 section4 section4 section1" "main__propio main__propio main__propio main__propio main__propio main__propio" "main__propio main__propio main__propio main__propio main__propio main__propio" "pie__pagina pie__pagina pie__pagina pie__pagina pie__pagina pie__pagina";
 }
 
 .header {
