--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,13 @@
   grid-area: header;
   display: flex;
   flex-direction: column;
-  background-color: red;
+  background-color: black;
+  color: rgb(10, 227, 10);
+  text-align: center;
+  padding: 1rem;
+  margin: 1rem;
+  width: auto;
+  height: auto;
 }
 
 .section1 {
@@ -87,6 +93,18 @@
   background-color: aquamarine;
 }
 
+.divData{
+  background-color: gray;
+  color:black;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  margin: 0 auto;
+
+}
+.a {
+  color: black;
+}
 .section4 {
   grid-area: section4;
   background-color: blueviolet;
@@ -99,6 +117,10 @@
 
 .pie__pagina {
   grid-area: pie__pagina;
-  background-color: cadetblue;
+  background-color: rgb(48, 51, 51);
   text-align: center;
+  font:2rem;
+  color: rgb(10, 227, 10);
+  margin: 10vh;
+  padding: 0.1rem;
 }/*# sourceMappingURL=style.css.map */
