--- a/sass/style.css
+++ b/sass/style.css
@@ -18,7 +18,7 @@
 .header {
   grid-area: header;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   background-color: red;
 }
 
